fixed styling issue that was causing portfolio items with only one image to have incorrect alignment for its caption link above the image.

--- a/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/style.css
+++ b/domains/portfolio.aaronlademann.com/html/wp-content/themes/gridlocked/style.css
@@ -353,12 +353,12 @@ h6 {
 	position: fixed;
 	/* aaronl: custom - need to widen and move margin to child divs to fit aa.com logo */
 	width: 190px;
-	margin: 0;
+	margin: 21px 0 0 0;
 	left: 0;
 	z-index: 500;
 }
 /* webkit browsers */
-.chrome #sidebar, .safari #sidebar { margin-top: 52px; }
+.chrome #sidebar, .safari #sidebar { margin-top: 73px; }
 #sidebar .widget {
 	position: relative;
 	width: 164px;
@@ -1083,6 +1083,9 @@ label.error { color: red; }
 	width: 550px;
 	height: auto;
 }
+
+/* pages that only have one image need this */
+.single-portfolio .slides_control div { position: absolute; }
 
 .single-portfolio  ul.pagination {
 	right: 0;
